--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -92,6 +92,18 @@ body a:visited{color: #272727;font-size:14px;text-decoration:underline;}
 body a:hover{color: black;text-decoration:none;font-size:14px;}
 body a:active {color: black;text-decoration:none;font-size:14px;}
 
+.opacity {
+    position: absolute;
+    background-color: #222222;
+    top: 0;
+    left: 0;
+    display: none;
+    opacity: 0.4;
+    width: 100%;
+    height: 100%;
+    z-index: 150;
+}
+
 .header {
     margin-left: auto;
     margin-right: auto;
@@ -412,7 +424,7 @@ body a:active {color: black;text-decoration:none;font-size:14px;}
     position: absolute;
     width: 300px;
     height: 200px;
-    z-index: 10;
+    z-index: 200;
     top: 17px;
     left: -75px;
     cursor: default;
@@ -436,7 +448,7 @@ body a:active {color: black;text-decoration:none;font-size:14px;}
     display: block;
     border: 1px solid #E5E5E5;
     border-top: none;
-    box-shadow: 0 0 4px 3px #E5E5E5;
+    box-shadow: 0 0 9px 2px #E5E5FA;
     position: relative;
     top: 18px;
     padding-top: 30px;
