--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -37,7 +37,7 @@
                             else
                             {
                                 <td id="loginBtn" class="item">
-                                    Вход
+                                    <div id="signInBtn">Вход</div>
                                     <div class="login-window">
                                         <div class="triangle-top"></div>
                                         <div class="login-window-body">
