--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -98,7 +98,6 @@ body a:active {color: black;text-decoration:none;font-size:14px;}
     top: 0;
     left: 0;
     display: none;
-    opacity: 0.4;
     width: 100%;
     height: 100%;
     z-index: 150;
@@ -382,7 +381,7 @@ body a:active {color: black;text-decoration:none;font-size:14px;}
     padding-right: 10px;
 }
 
-.register-form tr.bad
+.bad
 {
     background-color: #f9f9f9;
 }
@@ -638,6 +637,90 @@ body a:active {color: black;text-decoration:none;font-size:14px;}
 
 .cabinet-main .error-message {
     color: #900;
+}
+
+.invite-list {
+    width: 100%;
+    margin: 10px 0 10px 0;
+}
+
+.invite-list th {
+    text-align: left;
+    padding-left: 15px;
+    padding-bottom: 10px;
+}
+
+.invite-list td {
+    padding: 10px 0;
+}
+
+.invite-list td:first-child {
+    text-align: center;   
+}
+
+.invite-list .inputs {
+    padding-left: 10px;
+    padding-right: 18px;
+    position: relative;
+}
+
+.invite-list .deleteAssignedUserBtn {
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.invite-list .clearAssignedUserBtn {
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.invite-list input {
+    width: 250px;
+    height: 20px;
+}
+
+.invite-list input:hover {
+    border: 1px solid #74ca35;
+    width: 252px;
+    height: 22px;
+}
+
+.invite-list input:focus {
+    border: 1px solid #74ca35;
+    width: 252px;
+    height: 22px;
+    outline: none;
+}
+
+.container {
+    overflow: hidden;
+    height: 500px;
+    position: relative;
+}
+
+.alt-way-container {
+    margin: 0;
+    position: absolute;
+    top: -300px;
+    -webkit-transition: all 500ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
+    -webkit-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+    -moz-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+    -ms-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+    -o-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
+    transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
+}
+
+.alt-way-container  #addUser {
+    float: right;
+    margin-right: 45px;
+}
+
+#showAltWayContainer {
+    cursor: pointer;
 }
 
 /* FF чтоб его! */
