--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
@@ -22,7 +22,9 @@
                     @Html.TextBox("firstUserEmail")
                 </td>
                 <td class="inputs">
-                    <img class="clearAssignedUserBtn" src="@Url.Content("~/Content/img/cross_2615.png")" />
+                    <div class="for-img">
+                        <img class="clearAssignedUserBtn" src="@Url.Content("~/Content/img/cross_2615.png")" />
+                    </div>
                 </td>
             </tr>
         </table>
