--- a/broccoli/BroccoliMvc/Views/Account/LogOn.cshtml
+++ b/broccoli/BroccoliMvc/Views/Account/LogOn.cshtml
@@ -11,7 +11,7 @@
 
 <div class="banner small">
     <div class="action">
-        <font>Регистрация</font>
+        <font>Вход</font>
     </div>
 </div>
 <div class="center-content">
