--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/OrderStatus.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/OrderStatus.cshtml
@@ -32,8 +32,8 @@
                             <tr>
                                 <td>@tsystem.System</td>        
                                 <td>@tsystem.AccountNumber</td>
-                                <td>@tsystem.Status</td>
-                                <td><a href="@tsystem.Link"></a></td>
+                                <td><span class="status">@tsystem.Status</span></td>
+                                <td><a href="@tsystem.Link">@tsystem.LinkText</a></td>
                             </tr>
                         } 
                     </table>
