--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -15,7 +15,7 @@
 <div class="center-content">
     <table>
         <tr>
-            @Html.Partial("CabinetMenu")
+            @Html.Partial("CabinetMenu", ViewData)
             <td class="cabinet-main">
                 <h3 class="mrg-top-bottom20">Добро пожаловать, @ViewBag.User.Name, в Ваш персональный кабинет компании Broccoli Trade!</h3>
                 Личный кабинет в разработке...
