--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -21,6 +21,17 @@
     <div class="center-content">
         <div class="instructions">
             <h3>Схема работы. Видео инструкция:</h3>
+            <div class="gal">
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/v/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+            </div>
         </div>
     </div>
 </div>
