--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
@@ -36,17 +36,39 @@
         <button id="sendInvites" type="button" class="green-button">Сделать рассылку</button>
         <div class="social-networks">
             <div class="buttons">
-                <!-- Put this script tag to the <head> of your page -->
-                <script type="text/javascript" src="http://vk.com/js/api/share.js?11" charset="windows-1251"></script>
+                <table>
+                    <tr>
+                        <td class="buttons">
+                            <!-- Put this script tag to the <head> of your page -->
+                            <script type="text/javascript" src="http://vk.com/js/api/share.js?11" charset="windows-1251"></script>
 
-                <!-- Put this script tag to the place, where the Share button will be -->
-                <script type="text/javascript">
-                    document.write(VK.Share.button({ url: "http://broccoli-trade.ru?token=@HttpContext.Current.User.Identity.Name" }, { type: "custom", text: "<img src=\"@Url.Content("~/Content/img/vk_logo.png")\" />" }));
-                </script>
-                <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "https://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script>
-                <a target="_blank" class="mrc__plugin_uber_like_button" href="http://broccoli-trade.ru?token=@HttpContext.Current.User.Identity.Name" data-mrc-config="{'nc' : '1', 'nt' : '1', 'cm' : '2', 'ck' : '2', 'sz' : '45', 'st' : '2', 'tp' : 'ok'}">Нравится</a>
-                <a target="_blank" class="mrc__plugin_uber_like_button" href="http://broccoli-trade.ru?token=@HttpContext.Current.User.Identity.Name" data-mrc-config="{'nc' : '1', 'nt' : '1', 'cm' : '2', 'ck' : '2', 'sz' : '45', 'st' : '2', 'tp' : 'mm'}">Нравится</a>
-                <script src="http://cdn.connect.mail.ru/js/loader.js" type="text/javascript" charset="UTF-8"></script>
+                            <!-- Put this script tag to the place, where the Share button will be -->
+                            <script type="text/javascript">
+                                document.write(VK.Share.button({ url: "http://broccoli-trade.ru?token=@HttpContext.Current.User.Identity.Name" }, { type: "custom", text: "<img src=\"@Url.Content("~/Content/img/vk_logo.png")\" />" }));
+                            </script>
+                        </td>
+                        <td class="name-network">
+                            <h4>Вконтакте</h4>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a target="_blank" class="mrc__plugin_uber_like_button" href="http://broccoli-trade.ru?token=@HttpContext.Current.User.Identity.Name" data-mrc-config="{'nc' : '1', 'nt' : '1', 'cm' : '2', 'ck' : '2', 'sz' : '45', 'st' : '2', 'tp' : 'ok'}">Нравится</a>
+                        </td>
+                        <td class="name-network">
+                            <h4>Одноклассники</h4>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a target="_blank" class="mrc__plugin_uber_like_button" href="http://broccoli-trade.ru?token=@HttpContext.Current.User.Identity.Name" data-mrc-config="{'nc' : '1', 'nt' : '1', 'cm' : '2', 'ck' : '2', 'sz' : '45', 'st' : '2', 'tp' : 'mm'}">Нравится</a>
+                            <script src="http://cdn.connect.mail.ru/js/loader.js" type="text/javascript" charset="UTF-8"></script>
+                        </td>
+                        <td class="name-network">
+                            <h4>Мой мир</h4>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
