--- a/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -3,8 +3,18 @@
 <head>
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox-buttons.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox-thumbs.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox.css")">
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Main/main.js")"></script>
+    <!-- FancyBox -->
+	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox.js")"></script>
+	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-buttons.js")"></script>
+	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-thumbs.js")"></script>
+    <script src="@Url.Content("~/Scripts/fancybox/jquery.easing-1.3.pack.js")"></script>
+	<script src="@Url.Content("~/Scripts/fancybox/m")"></script>
+
     @RenderSection("head", required:false)
 </head>
     <body>
@@ -42,5 +52,20 @@
         <div class="footer">
         </div>
         <div class="opacity"></div>
+        <script type="text/javascript">
+        	$(document).ready(function() {
+				$(".various").fancybox({
+					maxWidth	: 800,
+					maxHeight	: 600,
+					fitToView	: false,
+					width		: '70%',
+					height		: '70%',
+					autoSize	: false,
+					closeClick	: false,
+					openEffect	: 'elastic',
+					closeEffect	: 'none'
+				});
+			});
+		</script>
     </body>
 </html>
